# SWOS_OO_GUI

./: CMakeLists.txt  LICENSE  readme.md
include/anxswos/: anxswos.h  anxtex.h
include/swosasi/: swoshook.h  swslog.h
include/winmm/: winmmmain.def  winmmmain.h
plugins/: swos_oo_gui.asi
plugins/Debug/: anxswos.asi
plugins/Release/: swos_oo_gui.asi
src/anxswos/: anxmain.cc  anxswos.cc  anxtex.cc
src/swosasi/: swoshook.cc
src/winmm/: winmmmain.cc
zip/: SWOS_OO_GUI-0.2.0.7z  SWOS_OO_GUI-0.2.1.7z  SWOS_OO_GUI-0.2.2.7z
zip/overlay/swos/plugins/: swos_oo_gui.asi
